--- a/index.html
+++ b/index.html
@@ -228,6 +228,13 @@
     <!-- <h2 class="title is-2">More Demo Results</h2> -->
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
+
+        <div class="item item-boxes_6dof">
+          <video poster="" id="boxes_6dof" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/video/deio_fpv.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
         
         <div class="item item-boxes_6dof">
           <video poster="" id="boxes_6dof" autoplay controls muted loop playsinline height="100%">
