--- a/index.html
+++ b/index.html
@@ -250,6 +250,13 @@
           </video>
         </div>
 
+        <div class="item item-boxes_6dof">
+          <video poster="" id="boxes_6dof" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/video/DEIO_dark_flying.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+
         <div class="item item-deio_ecmd">
           <video poster="" id="deio_ecmd" autoplay controls muted loop playsinline height="100%">
             <source src="./static/video/Vicon_dark1.mp4"
