--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href=" "
+                <a href="https://www.youtube.com/watch?v=gs_LLOh3AsQ"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -297,6 +297,20 @@
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
+
+        <div align="center" style="
+          position: relative; 
+          width: 80%; 
+          height: 400px;
+          margin: 0 auto;
+          border-radius: 15px;
+          background: url('https://kwanwaipang.github.io/File/Representative_works/loading-icon.gif') center/contain no-repeat;
+          ">
+          <iframe width="100%" height="100%"
+            src="//player.bilibili.com/player.html?isOutside=true&aid=114385062199300&bvid=BV1Y5L4zQEn6&cid=29562110953&p=1" 
+            title="Bilibili video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen  style="opacity: 0; transition: opacity 0.5s; border-radius: 15px;" onload="this.style.opacity='1'"
+          ></iframe>
+        </div>
 
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
