--- a/index.html
+++ b/index.html
@@ -460,6 +460,20 @@
         (b) The estimated trajectory of our DEIO in the quadrotor flight and its comparison against the ground truth.
         </figcaption>
         </div>
+
+        <div class="content has-text-justified">
+        <h2 class="title is-3">Plug-and-play for Image-based SLAM</h2>
+        We design the learning-optimization-combined framework that tightly-coupled integrate trainable event-based differentiable bundle adjustment (e-DBA) with IMU pre-integration in a patch-based co-visibility factor graph that employs keyframe-based sliding window optimization.
+        <br> The framework is also designed to be easily plug-and-play, with <strong>DEIO</strong> for event-IMU modalities and <strong>DVIO</strong> for image-IMU modalities.
+        <p><br></p>
+        <div class="columns is-multiline">
+          <div class="column is-half">
+            <img src="./static/img/DEIO_estimated_trajectories.png" class="fixed-size-image" />
+          </div>
+          <div class="column is-half">
+            <img src="./static/img/DVIO_estimated_trajectories.png" class="fixed-size-image" />
+          </div>
+        </div>
         
       </div>      
     </div>
