--- a/index.html
+++ b/index.html
@@ -461,8 +461,9 @@
         </figcaption>
         </div>
 
+        <br><br>
         <div class="content has-text-justified">
-        <h2 class="title is-3">Plug-and-play for Image-based SLAM</h2>
+        <h2 class="title is-3">Plug-and-play for Image-based Solution</h2>
         We design the learning-optimization-combined framework that tightly-coupled integrate trainable event-based differentiable bundle adjustment (e-DBA) with IMU pre-integration in a patch-based co-visibility factor graph that employs keyframe-based sliding window optimization.
         <br> The framework is also designed to be easily plug-and-play, with <strong>DEIO</strong> for event-IMU modalities and <strong>DVIO</strong> for image-IMU modalities.
         <p><br></p>
