--- a/index.html
+++ b/index.html
@@ -491,11 +491,11 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>
-      @article{GWPHKU:DEIO,
+      @inproceedings{GWPHKU:DEIO,
         title={DEIO: Deep Event Inertial Odometry},
         author={Guan, Weipeng and Lin, Fuling and Chen, Peiyu and Lu, Peng},
-        journal={arXiv preprint arXiv:2411.03928},
-        year={2024}
+        booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision Workshops},
+        year={2025}
       }
     </code></pre>
   </div>
