--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
               background: url('https://kwanwaipang.github.io/File/Representative_works/loading-icon.gif') center/contain no-repeat;
               ">
               <iframe width="100%" height="100%"
-                src="//player.bilibili.com/player.html?isOutside=true&aid=114385062199300&bvid=BV1wysFzSETM&cid=29562110953&p=1" 
+                src="******" 
                 title="Bilibili video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen  style="opacity: 0; transition: opacity 0.5s; border-radius: 15px;" onload="this.style.opacity='1'"
               ></iframe>
             </div>
@@ -526,7 +526,7 @@
               background: url('https://kwanwaipang.github.io/File/Representative_works/loading-icon.gif') center/contain no-repeat;
               ">
               <iframe width="100%" height="100%"
-                src="//player.bilibili.com/player.html?isOutside=true&aid=114385062199300&bvid=BV1c2sFzEEWx&cid=29562110953&p=1" 
+                src="******" 
                 title="Bilibili video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen  style="opacity: 0; transition: opacity 0.5s; border-radius: 15px;" onload="this.style.opacity='1'"
               ></iframe>
             </div>
