--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                    target="_blank"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                      <i class="fab fa-images"></i>
+                      <i class="far fa-images"></i>
                   </span>
                   <span>Poster</span>
                   </a>
