--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
               background: url('https://kwanwaipang.github.io/File/Representative_works/loading-icon.gif') center/contain no-repeat;
               ">
               <iframe width="100%" height="100%"
-                src="******" 
+                src="//player.bilibili.com/player.html?isOutside=true&aid=115399194575048&bvid=BV1c2sFzEEWx&cid=33204929062&p=1&autoplay=0" 
                 title="Bilibili video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen  style="opacity: 0; transition: opacity 0.5s; border-radius: 15px;" onload="this.style.opacity='1'"
               ></iframe>
             </div>
@@ -526,7 +526,7 @@
               background: url('https://kwanwaipang.github.io/File/Representative_works/loading-icon.gif') center/contain no-repeat;
               ">
               <iframe width="100%" height="100%"
-                src="******" 
+                src="//player.bilibili.com/player.html?isOutside=true&aid=115399211352269&bvid=BV1wysFzSETM&cid=33205128119&p=1&autoplay=0" 
                 title="Bilibili video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen  style="opacity: 0; transition: opacity 0.5s; border-radius: 15px;" onload="this.style.opacity='1'"
               ></iframe>
             </div>
