--- a/index.html
+++ b/index.html
@@ -554,9 +554,10 @@
     <h2 class="title">BibTeX</h2>
     <pre><code>
       @inproceedings{GWPHKU:DEIO,
-        title={DEIO: Deep Event Inertial Odometry},
+        title={Deio: Deep event inertial odometry},
         author={Guan, Weipeng and Lin, Fuling and Chen, Peiyu and Lu, Peng},
-        booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision Workshops},
+        booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+        pages={4606--4615},
         year={2025}
       }
     </code></pre>
